# yarp-devices-forcetorque

./: CMakeLists.txt  README.md  ati_script  config.txt  firmwareupdater.ini  ftSensorsTests.xml  ft_senseInterface.xml  optoforce_script  startupScript
.github/: CODEOWNERS
.github/workflows/: conda-ci.yml
AME/: CMakeLists.txt  Multitorque.h  MultitorqueEncoder.cpp  MultitorqueEncoder.h  ame.ini  ameInterface.xml  amedriver.cpp  amedriver.cpp.autosave  amedriver.h  baseTypeEncoding.cpp  baseTypeEncoding.h  ethService.cpp  ethService.h  ftSensorNew.cpp  ftSensorNew.h  mttMonitor.cpp  osutil.cpp  osutil.h  rehab.h
ATI_Ethernet/: CMakeLists.txt  FT18003Net.xml  ati_ethernet.ini  ati_ethernetDriver.cpp  ati_ethernetDriver.h  ati_ethernetInterface.xml  yarprobotinterface.xml
amti/: CMakeLists.txt  README.md  amti_datadumper.xml  amtiforceplate.ini  amtiplatforms.ini  yarprobotinterface_amti.xml
amti/include/: AMTIForcePlate.h  AMTIPlatformsDriver.h  AMTIlib.h  IMultipleForcePlates.h
amti/src/: AMTIForcePlate.cpp  AMTIPlatformsDriver.cpp  AMTIlib.cpp  IMultipleForcePlates.cpp
app/: amti.xml  ftShoes.xml  ftShoes_amti_calibration.xml  ftShoes_logger.xml  ftShoes_plus_ftShoes_single_fts_plus_amti_plus_xsens.xml  ftShoes_singleFT.xml  ftShoes_single_fts.xml  ftShoes_single_fts_amti.xml  ftShoes_totalFT.xml
cmake/: FindAMTIDriver.cmake  FindAsio.cmake  FindOptoForce.cmake
forcetorqueDriverExample/: CMakeLists.txt  forcetorqueDriverExample.cpp  forcetorqueDriverExample.h  forcetorqueDriverExample.ini  yarprobotinterface.xml
ftNode/: CMakeLists.txt  ftnode.ini  ftnodeDriver.cpp  ftnodeDriver.h
ftNode/conf/: ftNode_ftShoeLeft_yarprobotinterface.xml  ftNode_ftShoeRight_yarprobotinterface.xml  ftNode_ftShoe_yarprobotinterface.xml  ftNode_yarprobotinterface.xml  ftshoes_YarpScope.xml  serial.ini
ftSensor/app/: ftSensorsTests.xml
ftSensor/script/: ftsense_script
ftShoe/: CMakeLists.txt  README.md  ftshoe.ini  ftshoeDriver.cpp  ftshoeDriver.h  ftshoe_yarprobotinterface_right.xml
ftShoe/conf/: firmwareupdater.ini  ftshoes_YarpScope.xml.txt  ftshoes_yarprobotinterface.xml  ftshoes_yarprobotinterface_PRO.01_May19_tmp.xml  ftshoes_yarprobotinterface_PRO.02.xml  ftshoes_yarprobotinterface_PRO.03.xml  ftshoes_yarprobotinterface_PRO01.xml  ftshoes_yarprobotinterface_PRO01_left.xml  ftshoes_yarprobotinterface_PRO01_right.xml  ftshoes_yarprobotinterface_PRO01_single_fts_for_calibration.xml  ftshoes_yarprobotinterface_withUDP_PRO.02.xml  ftshoes_yarprobotinterface_withUDP_PRO01.xml
ftShoe/conf/legacy/: ftshoes_yarprobotinterface_PRO.02.xml  ftshoes_yarprobotinterface_PRO01.xml
ftShoe/scripts/: ftShoe_startup  ftShoe_startup_left  ftShoe_startup_right
ftShoeUdpWrapper/: CMakeLists.txt  ftShoeUdpWrapper.cpp  ftShoeUdpWrapper.h  ftShoeUdpWrapper.ini
ftShoes/: ftShoes.xml  ft_senseInterfaceShoes.xml  ft_shoe_datadumper_left.xml  ft_shoe_datadumper_right.xml  ft_shoe_startup_script_left  ft_shoe_startup_script_right  ft_shoe_yarp_interface_left.xml  ft_shoe_yarp_interface_right.xml  ft_shoes_datadumper.xml  ft_shoes_startup_script  ftsense_script~  ftshoes_script  ftshoes_script~
optoforce/: CMakeLists.txt  calib.ini  optoforceDriver.cpp  optoforceDriver.h  yarprobotinterface.xml
